--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "",
+  "description": "Starting the demo",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
